--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
         ">সফলতার ডাক
             </h1>
             <p class="hero-discription">
-                একটি পরিষ্কার ইসলামিক ওয়েবসাইট, <br> যেখানে আপনি আপনার ইসলামিক জ্ঞান সমৃদ্ধ করতে পারবেন। এখানে আপনি
+                একটি ইসলামিক ওয়েবসাইট, <br> যেখানে আপনি আপনার ইসলামিক জ্ঞান সমৃদ্ধ করতে পারবেন। এখানে আপনি
                 ইসলামিক বইগুলো খুঁজে পেতে পারবেন এবং আপনার অভিজ্ঞতা এবং পরিচিতি ও বিভিন্ন ইসলামিক বাণী এবং বার্তা দিয়ে
                 অন্যদের উপকার করতে পারেন। সাফল্যের জন্য সাথে থাকুন এবং আপনার স্বপ্নগুলিকে বাস্তবে পরিণত করুন।
             </p>
