--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -20,7 +20,7 @@
     <div class="mail"> <a style=" color: rgba(240, 255, 255, 0.466);  "
             href="mailto:sofolotardak@gmail.com">sofolotardak@gmail.com</a>
     </div>
-    <p>© 2023 <span class="gontobyo">Sofolotar Dak</span>, All Rights Reserved.</p>
+    <p>© 2023 <span class="gontobyo">Sahreyar Arafat</span>, All Rights Reserved.</p>
     <p>Made by the <span class="heart">&#x2665;</span> of <a href="mailto:sahreyararafat@gmail.com">SahreyarArafat</a>
     </p>
 </footer>
