Multer code update.

--- a/views/approval-page.ejs
+++ b/views/approval-page.ejs
@@ -43,105 +43,97 @@
                     userstories.forEach(story=>{ %>
                     <% if(story.storyimage){ %>
                         <% var storyImage=story.storyimage %>
-                            <% console.log(storyImage) %>
-                                <% storyImage=storyImage.replace('public','') %>
-                                    <% console.log(storyImage) %>
-                                        <%}else{%>
-                                            <% let image_serial=Math.floor(Math.random() * 16) + 1; %>
-                                                <% storyImage=`./Image/story-image (${image_serial}).jpg` %>
+                            <% storyImage=storyImage.replace('public','') %>
+                                <%}else{%>
+                                    <% let image_serial=Math.floor(Math.random() * 16) + 1; %>
+                                        <% storyImage=`./Image/story-image (${image_serial}).jpg` %>
+
+                                            <%}%>
+                                                <section>
+                                                    <h1 style="margin: 30px 0px 50px;">
+                                                        <%= story.story_title %>
+                                                    </h1>
+                                                    <div class="content ">
+                                                        <div class="image_container"><img src="<%=storyImage %>"
+                                                                alt="Story-Image"></div>
+                                                        <div class="text_container">
+                                                            <p id="main-golpo">
+                                                                <%= story.story %>
+                                                                    <h4>-
+                                                                        <%= story.writter_name %>
+                                                                    </h4>
+                                                                    <h5 style="margin: 3px 0px 0px 12px; color: gray; ">
+                                                                        <span style="color: black; font-weight: bold;">
+                                                                            Posted by:</span>
+                                                                        <%= story.posted_by %>
+                                                                    </h5>
+                                                                    <h5 style="margin: 3px 0px 0px 12px; color: gray; ">
+                                                                        <span style="color: black; font-weight: bold;">
+                                                                            Posted at:</span>
+                                                                        <%= story.Posted_at %>
+                                                                    </h5>
+                                                            </p>
+                                                        </div>
+                                                    </div>
+
+
+
+                                                    <div class="Approve-Delete-container">
+                                                        <form class="golpo-form" action="/userApprovedStory"
+                                                            method="post" enctype="multipart/form-data">
+
+                                                            <input class="d-none" name="golpo_id"
+                                                                value="<%= story._id %>" />
+
+                                                            <input class="d-none" type="text" name="story_type"
+                                                                value="<%= story.story_type %>" />
+
+                                                            <input class="d-none" type="text" name="writter_name"
+                                                                value="<%= story.writter_name %>" />
+
+                                                            <input class="d-none" type="text" name="story_title"
+                                                                value="<%= story.story_title %>" />
+
+                                                            <input class="d-none" type="text" name="storyimage"
+                                                                value="<%= storyImage %>" />
+
+                                                            <input class="d-none" type="text" name="post_time"
+                                                                value="<%= story.Posted_at %>" />
+
+                                                            <input class="d-none" type="text" name="story"
+                                                                value="<%= story.story %>" />
+
+                                                            <button id="approve-btn" class="approve-btn"
+                                                                type="submit">Approve</button>
+
+                                                        </form>
+
+
+                                                        <form action="/delete-golpo" method="post">
+
+                                                            <input class="d-none" name="golpo_id"
+                                                                value="<%= story._id %>" />
+
+                                                            <button class="delete-btn" type="submit">Delete</button>
+
+                                                        </form>
+
+                                                    </div>
+
+                                                </section>
+                                                <% }) %>
 
                                                     <%}%>
-                                                        <section>
-                                                            <h1 style="margin: 30px 0px 50px;">
-                                                                <%= story.story_title %>
-                                                            </h1>
-                                                            <div class="content ">
-                                                                <div class="image_container"><img src="<%=storyImage %>"
-                                                                        alt="Story-Image"></div>
-                                                                <div class="text_container">
-                                                                    <p id="main-golpo">
-                                                                        <%= story.story %>
-                                                                            <h4>-
-                                                                                <%= story.writter_name %>
-                                                                            </h4>
-                                                                            <h5
-                                                                                style="margin: 3px 0px 0px 12px; color: gray; ">
-                                                                                <span
-                                                                                    style="color: black; font-weight: bold;">
-                                                                                    Posted by:</span>
-                                                                                <%= story.posted_by %>
-                                                                            </h5>
-                                                                            <h5
-                                                                                style="margin: 3px 0px 0px 12px; color: gray; ">
-                                                                                <span
-                                                                                    style="color: black; font-weight: bold;">
-                                                                                    Posted at:</span>
-                                                                                <%= story.Posted_at %>
-                                                                            </h5>
-                                                                    </p>
-                                                                </div>
-                                                            </div>
+
+                                                        <!-- Content Section is finished !  -->
+
+                                                        <%- include("layout/footer") %>
+
+                                                            <!-- Footer Section is finished ! -->
+
+                                                            <script src="./Js/main.js"></script>
 
 
-
-                                                            <div class="Approve-Delete-container">
-                                                                <form class="golpo-form" action="/userApprovedStory"
-                                                                    method="post" enctype="multipart/form-data">
-
-                                                                    <input class="d-none" name="golpo_id"
-                                                                        value="<%= story._id %>" />
-
-                                                                    <input class="d-none" type="text" name="story_type"
-                                                                        value="<%= story.story_type %>" />
-
-                                                                    <input class="d-none" type="text"
-                                                                        name="writter_name"
-                                                                        value="<%= story.writter_name %>" />
-
-                                                                    <input class="d-none" type="text" name="story_title"
-                                                                        value="<%= story.story_title %>" />
-
-                                                                    <input class="d-none" type="text" name="storyimage"
-                                                                        value="<%= storyImage %>" />
-
-                                                                    <input class="d-none" type="text" name="post_time"
-                                                                        value="<%= story.Posted_at %>" />
-
-                                                                    <input class="d-none" type="text" name="story"
-                                                                        value="<%= story.story %>" />
-
-                                                                    <button id="approve-btn" class="approve-btn"
-                                                                        type="submit">Approve</button>
-
-                                                                </form>
-
-
-                                                                <form action="/delete-golpo" method="post">
-
-                                                                    <input class="d-none" name="golpo_id"
-                                                                        value="<%= story._id %>" />
-
-                                                                    <button class="delete-btn"
-                                                                        type="submit">Delete</button>
-
-                                                                </form>
-
-                                                            </div>
-
-                                                        </section>
-                                                        <% }) %>
-
-                                                            <%}%>
-
-                                                                <!-- Content Section is finished !  -->
-
-                                                                <%- include("layout/footer") %>
-
-                                                                    <!-- Footer Section is finished ! -->
-
-                                                                    <script src="./Js/main.js"></script>
-
-
-                                                                    </body>
+                                                            </body>
 
 </html>
